# mentalis-leltar

./: Csocsó-mentális-leltár-válaszok.csv  Csocsó-mentális-leltár-válaszok.xlsx  README.md  extract_factors.ipynb  extract_factors.py  feedback_data.csv  pyproject.toml  wants_feedback_answers.csv
